--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     branches:
-      - develop
+      - main
   workflow_dispatch:
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     env:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
-      PROJECT_ID: cimpzzikygouamvsjwxa
+      PROJECT_ID: oylabnyairydnuppagdx
 
     steps:
       - uses: actions/checkout@v3
