--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -22,5 +22,5 @@ jobs:
         with:
           version: 1.0.0
 
-      - run: supabase link --project-ref $PROJECT_ID
+      - run: supabase link --project-ref oylabnyairydnuppagdx
       - run: supabase db push
