--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -18,9 +18,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: supabase/setup-cli@v1
+      - uses: supabase/setup-cli@v2
         with:
           version: 1.0.0
 
-      - run: supabase link --project-ref oylabnyairydnuppagdx
+      - run: supabase link --project-ref $PROJECT_ID
       - run: supabase db push
